--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "base64-arraybuffer": "^1.0.1",
+    "base-64": "^1.0.0",
     "expo": "~47.0.12",
+    "expo-asset": "^8.7.0",
+    "expo-asset-utils": "~3.0.0",
+    "expo-gl": "^12.0.1",
     "expo-status-bar": "~1.4.2",
+    "react-native-unimodules": "^0.15.0",
+    "expo-file-system": "^15.1.1",
+    "expo-three": "^7.0.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/three": "^0.148.0"
   },
   "private": true
 }
